# Spinnaker-CMake

./: CMakeLists.txt  README.md
cmake/: FindFlir.cmake
examples/aquisition/: CMakeLists.txt
examples/aquisition/src/: Acquisition.cpp
examples/listCameras/: CMakeLists.txt
examples/listCameras/src/: Enumeration.cpp
